@@ -43,7 +43,7 @@ num_devices=2
 #         The flags variable specifies the priority (16383 if empty).
 #         Use "-" in the flags variable for the default priority (-1)
 # "/..."  The device is mounted on /...
-#         The flags variable specifies the type (ext2, ext4, btrfs or xfs;
+#         The flags variable specifies the type (ext2, ext4, btrfs, or xfs;
 #         default is ext4)
 # "-"     The filesystem (specified by flags as above) is created in
 #         /dev/zram$NUM but not mounted
